[package]
name = "ls_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.1", features = ["derive"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_yaml = "0.9.19"
thirtyfour = "0.31.0"
tokio = "1.27.0"
derive_builder = "0.12.0"
regex = "1.8.1"
lazy_static = "1.4.0"
rand = "0.8.5"
serial_test = "2.0.0"